objects/BMCServiceDesk__BMC_NetworkPort__c.object
<CustomObject>
    <description>BMC_NetworkPort. CMDB Class used to store information about interfaces that connect network drives to computer systems. Each instance of this class is related to the computer system by a BMC_HostedSystemComponents relationship. This class corresponds to the DMTF CIM_NetworkPort class.</description>
    <fields>
        <fullName>BMCServiceDesk__Active_Maximum_Transmission_Unit__c</fullName>
        <label>Active Maximum Transmission Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Auto_Sense__c</fullName>
        <label>Auto Sense</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Full_Duplex__c</fullName>
        <label>Full Duplex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Link_Technology__c</fullName>
        <label>Link Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Token Ring</fullName>
                </value>
                <value>
                    <fullName>Frame Relay</fullName>
                </value>
                <value>
                    <fullName>Infrared</fullName>
                </value>
                <value>
                    <fullName>BlueTooth</fullName>
                </value>
                <value>
                    <fullName>Wireless LAN</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Speed__c</fullName>
        <label>Maximum Speed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Network_Addresses__c</fullName>
        <label>Network Addresses</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Physical_Description__c</fullName>
        <label>Physical Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Port_Type__c</fullName>
        <label>Port Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>Token Ring</fullName>
                </value>
                <value>
                    <fullName>WAN</fullName>
                </value>
                <value>
                    <fullName>Fibre Channel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Speed__c</fullName>
        <label>Speed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Supported_Maximum_Transmission_Unit__c</fullName>
        <label>Supported Maximum Transmission Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Network Port</label>
    <nameField>
        <label>Network Port Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network Ports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>